set(CMAKE_LEGACY_CYGWIN_WIN32 0)
PROJECT(NPProject)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(SOURCES_DIR "${PROJECT_SOURCE_DIR}/src")

include_directories(${SOURCES_DIR})
include_directories(${SOURCES_DIR}/base)
include_directories(${PROJECT_SOURCE_DIR}/include)

FILE(GLOB_RECURSE DIR_SRCS "./src/*.cpp")
ADD_EXECUTABLE(NPProject ${DIR_SRCS})

#FIND_PATH(SDL2 REQUIRED sdl2)
#FIND_LIBRARY(SDL2 REQUIRED sdl2)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2_TTF REQUIRED SDL2_ttf)
PKG_SEARCH_MODULE(SDL2_IMAGE REQUIRED SDL2_image)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L${SDL2_LIBRARY_DIRS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L${SDL2_TTF_LIBRARY_DIRS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L${SDL2_IMAGE_LIBRARY_DIRS}")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_TTF_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_IMAGE_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} lua)